--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,38 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="icon" sizes="16x16" href="/favicon.svg" />
+    <link rel="icon" sizes="32x32" href="/favicon.svg" />
+    <link rel="icon" sizes="192x192" href="/favicon.svg" />
+    <link rel="icon" sizes="512x512" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AutoMaxLib ✨ - Never Break Your Coding Streak Again</title>
     <meta
       name="description"
       content="🚀 Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers."
     />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://automaxlib.com/" />
+    <meta property="og:title" content="AutoMaxLib ✨ - Never Break Your Coding Streak Again" />
+    <meta property="og:description" content="🚀 Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers." />
+    <meta property="og:image" content="/logo.svg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://automaxlib.com/" />
+    <meta property="twitter:title" content="AutoMaxLib ✨ - Never Break Your Coding Streak Again" />
+    <meta property="twitter:description" content="🚀 Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers." />
+    <meta property="twitter:image" content="/logo.svg" />
+
+    <!-- Theme color for browser UI -->
+    <meta name="theme-color" content="#0284c7" />
+    <meta name="msapplication-TileColor" content="#0284c7" />
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="/manifest.json" />
     <!-- Razorpay Checkout Script -->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
