--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,20 +20,32 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://automaxlib.com/" />
-    <meta property="og:title" content="AutoMaxLib - Never Break Your Coding Streak Again" />
-    <meta property="og:description" content="Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers." />
+    <meta
+      property="og:title"
+      content="AutoMaxLib - Never Break Your Coding Streak Again"
+    />
+    <meta
+      property="og:description"
+      content="Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers."
+    />
     <meta property="og:image" content="/logo.svg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://automaxlib.com/" />
-    <meta property="twitter:title" content="AutoMaxLib - Never Break Your Coding Streak Again" />
-    <meta property="twitter:description" content="Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers." />
+    <meta
+      property="twitter:title"
+      content="AutoMaxLib - Never Break Your Coding Streak Again"
+    />
+    <meta
+      property="twitter:description"
+      content="Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers."
+    />
     <meta property="twitter:image" content="/logo.svg" />
 
     <!-- Theme color for browser UI -->
-    <meta name="theme-color" content="#0284c7" />
-    <meta name="msapplication-TileColor" content="#0284c7" />
+    <meta name="theme-color" content="#374151" />
+    <meta name="msapplication-TileColor" content="#374151" />
 
     <!-- Web App Manifest -->
     <link rel="manifest" href="/manifest.json" />
