--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,22 +11,23 @@
     <link rel="icon" sizes="192x192" href="/favicon.svg" />
     <link rel="icon" sizes="512x512" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AutoMaxLib - Never Break Your Coding Streak Again</title>
+    <title>GitHub README AI - Best AI README Generator | AutoMaxLib</title>
     <meta
       name="description"
-      content="Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers."
+      content="AutoMaxLib is the leading GitHub README AI platform. Create professional GitHub READMEs with our advanced README AI generator, plus auto commit tools and GitHub contribution features."
     />
+    <meta name="keywords" content="GitHub README AI, README AI generator, GitHub README generator AI, auto commit AI, GitHub contribution tools, AI commit generator, GitHub streak maintainer, profile generation AI, repository README generator, GitHub automation, coding streak, developer tools" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://automaxlib.com/" />
     <meta
       property="og:title"
-      content="AutoMaxLib - Never Break Your Coding Streak Again"
+      content="GitHub README AI - Best AI README Generator | AutoMaxLib"
     />
     <meta
       property="og:description"
-      content="Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers."
+      content="AutoMaxLib is the leading GitHub README AI platform. Create professional GitHub READMEs with our advanced README AI generator, plus auto commit tools and GitHub contribution features."
     />
     <meta property="og:image" content="/logo.svg" />
 
@@ -35,11 +36,11 @@
     <meta property="twitter:url" content="https://automaxlib.com/" />
     <meta
       property="twitter:title"
-      content="AutoMaxLib - Never Break Your Coding Streak Again"
+      content="GitHub README AI - Best AI README Generator | AutoMaxLib"
     />
     <meta
       property="twitter:description"
-      content="Intelligently maintain your GitHub contribution graph with meaningful commits. Build consistent coding habits and showcase your dedication to potential employers."
+      content="AutoMaxLib is the leading GitHub README AI platform. Create professional GitHub READMEs with our advanced README AI generator, plus auto commit tools and GitHub contribution features."
     />
     <meta property="twitter:image" content="/logo.svg" />
 
@@ -47,8 +48,65 @@
     <meta name="theme-color" content="#374151" />
     <meta name="msapplication-TileColor" content="#374151" />
 
+    <!-- Additional SEO Meta Tags -->
+    <meta name="author" content="AutoMaxLib" />
+    <meta name="language" content="en" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://automaxlib.com/" />
+
     <!-- Web App Manifest -->
     <link rel="manifest" href="/manifest.json" />
+
+    <!-- GitHub README AI Schema Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "GitHub README AI",
+      "alternateName": "AutoMaxLib GitHub README AI Generator",
+      "description": "The best GitHub README AI tool for creating professional GitHub profile READMEs with advanced artificial intelligence",
+      "url": "https://automaxlib.com",
+      "applicationCategory": "DeveloperApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      },
+      "featureList": [
+        "GitHub README AI generation",
+        "AI-powered README creation",
+        "Professional GitHub profile formatting",
+        "Customizable README templates",
+        "Skills showcase with AI",
+        "GitHub integration"
+      ],
+      "provider": {
+        "@type": "Organization",
+        "name": "AutoMaxLib",
+        "url": "https://automaxlib.com",
+        "logo": "https://automaxlib.com/logo.svg",
+        "description": "Leading provider of GitHub README AI and developer productivity solutions",
+        "sameAs": [
+          "https://github.com/automaxlib"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "customer service",
+          "url": "https://automaxlib.com/contact"
+        }
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "ratingCount": "250"
+      },
+      "keywords": "GitHub README AI, README AI generator, GitHub README generator AI, AI README creator, GitHub profile README AI"
+    }
+    </script>
+
     <!-- Razorpay Checkout Script -->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
