--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="icon" sizes="16x16" href="/favicon.svg" />
-    <link rel="icon" sizes="32x32" href="/favicon.svg" />
-    <link rel="icon" sizes="192x192" href="/favicon.svg" />
-    <link rel="icon" sizes="512x512" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=2" />
+    <link rel="apple-touch-icon" href="/favicon.svg?v=2" />
+    <link rel="shortcut icon" href="/favicon.ico?v=2" />
+    <link rel="icon" sizes="16x16" href="/favicon.svg?v=2" />
+    <link rel="icon" sizes="32x32" href="/favicon.svg?v=2" />
+    <link rel="icon" sizes="192x192" href="/favicon.svg?v=2" />
+    <link rel="icon" sizes="512x512" href="/favicon.svg?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub README AI - Best AI README Generator | AutoMaxLib</title>
     <meta
