--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,7 @@
       property="og:title"
       content="GitHub README AI - Best AI README Generator | AutoMaxLib"
     />
+    
     <meta
       property="og:description"
       content="AutoMaxLib is the leading GitHub README AI platform. Create professional GitHub READMEs with our advanced README AI generator, plus auto commit tools and GitHub contribution features."
@@ -49,6 +50,7 @@
     <meta name="msapplication-TileColor" content="#374151" />
 
     <!-- Additional SEO Meta Tags -->
+    <meta name="google-site-verification" content="wKvRsGoiORSpwdowIfg-MasFdq3uNgYp3Vfh2xw87oU" /> 
     <meta name="author" content="AutoMaxLib" />
     <meta name="language" content="en" />
     <meta name="revisit-after" content="7 days" />
