fixed the domain name

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://automaxlib.com/" />
+    <meta property="og:url" content="https://automaxlib.online/" />
     <meta
       property="og:title"
       content="GitHub README AI - Best AI README Generator | AutoMaxLib"
@@ -34,7 +34,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://automaxlib.com/" />
+    <meta property="twitter:url" content="https://automaxlib.online/" />
     <meta
       property="twitter:title"
       content="GitHub README AI - Best AI README Generator | AutoMaxLib"
@@ -55,7 +55,7 @@
     <meta name="language" content="en" />
     <meta name="revisit-after" content="7 days" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://automaxlib.com/" />
+    <link rel="canonical" href="https://automaxlib.online/" />
 
     <!-- Web App Manifest -->
     <link rel="manifest" href="/manifest.json" />
@@ -68,7 +68,7 @@
       "name": "GitHub README AI",
       "alternateName": "AutoMaxLib GitHub README AI Generator",
       "description": "The best GitHub README AI tool for creating professional GitHub profile READMEs with advanced artificial intelligence",
-      "url": "https://automaxlib.com",
+      "url": "https://automaxlib.online",
       "applicationCategory": "DeveloperApplication",
       "operatingSystem": "Web",
       "offers": {
@@ -88,16 +88,16 @@
       "provider": {
         "@type": "Organization",
         "name": "AutoMaxLib",
-        "url": "https://automaxlib.com",
-        "logo": "https://automaxlib.com/logo.svg",
+        "url": "https://automaxlib.online",
+        "logo": "https://automaxlib.online/logo.svg",
         "description": "Leading provider of GitHub README AI and developer productivity solutions",
         "sameAs": [
-          "https://github.com/automaxlib"
+          "https://github.com/AutoMaxLib"
         ],
         "contactPoint": {
           "@type": "ContactPoint",
           "contactType": "customer service",
-          "url": "https://automaxlib.com/contact"
+          "url": "https://automaxlib.online/contact"
         }
       },
       "aggregateRating": {
