--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,11 @@
       property="og:description"
       content="AutoMaxLib is the leading GitHub README AI platform. Create professional GitHub READMEs with our advanced README AI generator, plus auto commit tools and GitHub contribution features."
     />
-    <meta property="og:image" content="/logo.svg" />
+    <meta property="og:image" content="https://automaxlib.online/og-image.svg" />
+    <meta property="og:image:alt" content="AutoMaxLib - AI-Powered GitHub Tools & Auto Commit Generator" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="AutoMaxLib" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -43,7 +47,7 @@
       property="twitter:description"
       content="AutoMaxLib is the leading GitHub README AI platform. Create professional GitHub READMEs with our advanced README AI generator, plus auto commit tools and GitHub contribution features."
     />
-    <meta property="twitter:image" content="/logo.svg" />
+    <meta property="twitter:image" content="https://automaxlib.online/og-image.svg" />
 
     <!-- Theme color for browser UI -->
     <meta name="theme-color" content="#374151" />
@@ -59,6 +63,92 @@
 
     <!-- Web App Manifest -->
     <link rel="manifest" href="/manifest.json" />
+
+    <!-- JSON-LD Structured Data for Organization -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "AutoMaxLib",
+      "alternateName": "AutoMaxLib - AI-Powered GitHub Tools",
+      "url": "https://automaxlib.online",
+      "logo": "https://automaxlib.online/logo.svg",
+      "image": "https://automaxlib.online/og-image.svg",
+      "description": "Leading provider of AI-powered GitHub automation tools, README generators, and developer productivity solutions",
+      "foundingDate": "2024",
+      "sameAs": [
+        "https://github.com/automaxlib"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "url": "https://automaxlib.online/contact"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "US"
+      }
+    }
+    </script>
+
+    <!-- JSON-LD Structured Data for Website -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "AutoMaxLib",
+      "alternateName": "AutoMaxLib - GitHub README AI & Auto Commit Tools",
+      "url": "https://automaxlib.online",
+      "description": "The leading GitHub README AI platform offering intelligent README generation, auto commit AI, and GitHub contribution tools",
+      "publisher": {
+        "@type": "Organization",
+        "name": "AutoMaxLib",
+        "logo": "https://automaxlib.online/logo.svg"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://automaxlib.online/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
+    <!-- JSON-LD Structured Data for Software Application -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "AutoMaxLib",
+      "description": "AI-powered GitHub README generator, auto commit tools, and developer productivity platform",
+      "url": "https://automaxlib.online",
+      "applicationCategory": "DeveloperApplication",
+      "operatingSystem": "Web",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "availability": "https://schema.org/InStock"
+      },
+      "featureList": [
+        "AI-powered README generation",
+        "GitHub auto commit tools",
+        "Repository README generator",
+        "Profile README generator",
+        "GitHub contribution analytics",
+        "Coding streak maintenance",
+        "Developer productivity tools"
+      ],
+      "provider": {
+        "@type": "Organization",
+        "name": "AutoMaxLib"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.9",
+        "ratingCount": "250"
+      }
+    }
+    </script>
 
     <!-- GitHub README AI Schema Markup -->
     <script type="application/ld+json">
