--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,11 +54,14 @@
     <meta name="msapplication-TileColor" content="#374151" />
 
     <!-- Additional SEO Meta Tags -->
-    <meta name="google-site-verification" content="wKvRsGoiORSpwdowIfg-MasFdq3uNgYp3Vfh2xw87oU" /> 
+    <meta name="google-site-verification" content="wKvRsGoiORSpwdowIfg-MasFdq3uNgYp3Vfh2xw87oU" />
     <meta name="author" content="AutoMaxLib" />
     <meta name="language" content="en" />
     <meta name="revisit-after" content="7 days" />
     <meta name="robots" content="index, follow" />
+    <meta name="application-name" content="AutoMaxLib" />
+    <meta name="apple-mobile-web-app-title" content="AutoMaxLib" />
+    <meta name="msapplication-tooltip" content="AutoMaxLib - AI-Powered GitHub Tools" />
     <link rel="canonical" href="https://automaxlib.online/" />
 
     <!-- Web App Manifest -->
@@ -97,7 +100,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "AutoMaxLib",
-      "alternateName": "AutoMaxLib - GitHub README AI & Auto Commit Tools",
+      "alternateName": ["AutoMaxLib - GitHub README AI & Auto Commit Tools", "AutoMaxLib - AI-Powered GitHub Tools"],
       "url": "https://automaxlib.online",
       "description": "The leading GitHub README AI platform offering intelligent README generation, auto commit AI, and GitHub contribution tools",
       "publisher": {
@@ -109,7 +112,22 @@
         "@type": "SearchAction",
         "target": "https://automaxlib.online/search?q={search_term_string}",
         "query-input": "required name=search_term_string"
+      },
+      "mainEntity": {
+        "@type": "Organization",
+        "name": "AutoMaxLib",
+        "url": "https://automaxlib.online"
       }
+    }
+    </script>
+
+    <!-- JSON-LD for Site Name Preference -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "AutoMaxLib",
+      "url": "https://automaxlib.online"
     }
     </script>
 
