--- a/frontend/index.html
+++ b/frontend/index.html
@@ -217,11 +217,80 @@
     }
     </script>
 
-    <!-- Razorpay Checkout Script -->
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <!-- Critical CSS Inline -->
+    <style>
+      /* Critical above-the-fold styles */
+      *,::before,::after{box-sizing:border-box;border-width:0;border-style:solid;border-color:#e5e7eb}
+      html{line-height:1.5;-webkit-text-size-adjust:100%;-moz-tab-size:4;tab-size:4;font-family:ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif}
+      body{margin:0;line-height:inherit;background-color:#fff;color:#111827}
+      .animate-fade-in-up{animation:fadeInUp 0.6s ease-out}
+      @keyframes fadeInUp{from{opacity:0;transform:translateY(30px)}to{opacity:1;transform:translateY(0)}}
+      .gradient-text{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
+      .text-3xl{font-size:1.875rem;line-height:2.25rem}
+      .text-4xl{font-size:2.25rem;line-height:2.5rem}
+      .text-5xl{font-size:3rem;line-height:1}
+      .font-semibold{font-weight:600}
+      .text-center{text-align:center}
+      .text-gray-900{color:#111827}
+      .leading-tight{line-height:1.25}
+      .max-w-3xl{max-width:48rem}
+      .mx-auto{margin-left:auto;margin-right:auto}
+      .px-6{padding-left:1.5rem;padding-right:1.5rem}
+      .py-16{padding-top:4rem;padding-bottom:4rem}
+      .space-y-8>:not([hidden])~:not([hidden]){margin-top:2rem}
+      @media (min-width:768px){.md\\:text-4xl{font-size:2.25rem;line-height:2.5rem}.md\\:py-32{padding-top:8rem;padding-bottom:8rem}}
+      @media (min-width:1024px){.lg\\:text-5xl{font-size:3rem;line-height:1}.lg\\:max-w-5xl{max-width:64rem}}
+    </style>
+
+    <!-- Preload critical resources -->
+    <link rel="preload" href="/src/main.jsx" as="script" crossorigin>
+    <link rel="preload" href="/logo.svg" as="image" type="image/svg+xml">
+    <link rel="preload" href="/favicon.svg" as="image" type="image/svg+xml">
+    <link rel="preload" href="/images/Frameweb.png" as="image" media="(min-width: 768px)">
+    <link rel="preload" href="/images/Framemobile.png" as="image" media="(max-width: 767px)">
+
+    <!-- DNS prefetch for external domains -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+    <link rel="dns-prefetch" href="//checkout.razorpay.com">
+    <link rel="dns-prefetch" href="//api.clerk.dev">
+    <link rel="dns-prefetch" href="//images.unsplash.com">
+
+    <!-- Preconnect to critical domains -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://api.clerk.dev" crossorigin>
+
+    <!-- Prefetch next likely pages -->
+    <link rel="prefetch" href="/dashboard">
+    <link rel="prefetch" href="/github-readme-ai-landing">
+    <link rel="prefetch" href="/about">
+
+    <!-- Async load non-critical scripts -->
+    <script async src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+
+    <!-- Loading indicator for better UX -->
+    <script>
+      // Show loading indicator while app loads
+      const root = document.getElementById('root');
+      root.innerHTML = '<div style="display:flex;align-items:center;justify-content:center;height:100vh;font-family:system-ui"><div style="text-align:center"><div style="width:40px;height:40px;border:4px solid #f3f3f3;border-top:4px solid #3498db;border-radius:50%;animation:spin 1s linear infinite;margin:0 auto 16px"></div><p style="color:#666;margin:0">Loading AutoMaxLib...</p></div></div><style>@keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}</style>';
+    </script>
+
+    <!-- Main app script with defer for better performance -->
+    <script type="module" defer src="/src/main.jsx"></script>
+
+    <!-- Service Worker Registration -->
+    <script>
+      if ('serviceWorker' in navigator && location.protocol === 'https:') {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then(registration => console.log('SW registered'))
+            .catch(error => console.log('SW registration failed'));
+        });
+      }
+    </script>
   </body>
 </html>
